--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "ext-iconv": "*",
     "api-platform/doctrine-orm": "^3.4",
     "api-platform/symfony": "^3.4",
-    "doctrine/dbal": "^3",
+    "doctrine/dbal": "^3 || ^4.2",
     "doctrine/doctrine-bundle": "^2.15",
     "doctrine/doctrine-migrations-bundle": "^3.4",
     "doctrine/orm": "^3.5",
@@ -26,7 +26,7 @@
     "symfony/dotenv": "6.4.*",
     "symfony/expression-language": "6.4.*",
     "symfony/flex": "^2",
-    "symfony/framework-bundle": "6.4.*",
+    "symfony/framework-bundle":"^5.4 || ^6.0" ,
     "symfony/http-client": "6.4.*",
     "symfony/messenger": "6.4.*",
     "symfony/property-access": "6.4.*",
