--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,13 +1,13 @@
 services:
-    mtonzar\SharedHealthCheckBundle\DataProvider\HealthCheckProvider:
+    mtonzar\\SharedHealthCheckBundle\\DataProvider\\HealthCheckProvider:
         arguments:
-            $databaseChecker: '@mtonzar\SharedHealthCheckBundle\Service\HealthChecker\DatabaseHealthChecker'
-            $cacheChecker: '@mtonzar\SharedHealthCheckBundle\Service\HealthChecker\CacheHealthChecker'
-            $queueChecker: '@mtonzar\SharedHealthCheckBundle\Service\HealthChecker\QueueHealthChecker'
-            $apiDependencyChecker: '@mtonzar\SharedHealthCheckBundle\Service\HealthChecker\ApiDependencyHealthChecker'
+            $databaseChecker: '@mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\DatabaseHealthChecker'
+            $cacheChecker: '@mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\CacheHealthChecker'
+            $queueChecker: '@mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\QueueHealthChecker'
+            $apiDependencyChecker: '@mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\ApiDependencyHealthChecker'
         tags: ['api_platform.state_provider']
 
-    mtonzar\SharedHealthCheckBundle\Service\HealthChecker\DatabaseHealthChecker: ~
-    mtonzar\SharedHealthCheckBundle\Service\HealthChecker\CacheHealthChecker: ~
-    mtonzar\SharedHealthCheckBundle\Service\HealthChecker\QueueHealthChecker: ~
-    mtonzar\SharedHealthCheckBundle\Service\HealthChecker\ApiDependencyHealthChecker: ~
+    mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\DatabaseHealthChecker: ~
+    mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\CacheHealthChecker: ~
+    mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\QueueHealthChecker: ~
+    mtonzar\\SharedHealthCheckBundle\\Service\\HealthChecker\\ApiDependencyHealthChecker: ~
