--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,11 +5,12 @@ services:
             $cacheChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker'
             $queueChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker'
             $apiDependencyChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker'
-            $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
-        tags: ["api_platform.state_provider"]
+            $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenesHealthChecker'
+    tags: ['api_platform.state_provider']
+
 
     mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker: ~
-    mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\LivenesHealthChecker: ~
