--- a/src/SharedServicesBundle/Resources/config/services.yml
+++ b/src/SharedServicesBundle/Resources/config/services.yml
@@ -5,7 +5,7 @@ services:
             $cacheChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker'
             $queueChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker'
             $apiDependencyChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker'
-            $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
+            $livenesChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenesHealthChecker'
         tags: ['api_platform.state_provider']
 
     mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker:
@@ -24,6 +24,6 @@ services:
         autowire: true
         public: true
 
-    mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker:
+    mtonzar\SharedServicesBundle\Service\HealthChecker\LivenesHealthChecker:
         autowire: true
         public: true
