--- a/src/SharedServicesBundle/Resources/config/services.yml
+++ b/src/SharedServicesBundle/Resources/config/services.yml
@@ -5,25 +5,11 @@ services:
             $cacheChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker'
             $queueChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker'
             $apiDependencyChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker'
-            $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
+            $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'  # <=== ici
         tags: ['api_platform.state_provider']
 
-    mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker:
-        autowire: true
-        public: true
-
-    mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker:
-        autowire: true
-        public: true
-
-    mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker:
-        autowire: true
-        public: true
-
-    mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker:
-        autowire: true
-        public: true
-
-    mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker:
-        autowire: true
-        public: true
+    mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker: ~
