--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,8 @@ services:
             $queueChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker'
             $apiDependencyChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker'
             $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
+            $readinessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker'
+            
         tags: ['api_platform.state_provider']
 
     mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker: ~
@@ -13,3 +15,6 @@ services:
     mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker: ~
+    
