--- a/src/SharedServicesBundle/Resources/config/services.yml
+++ b/src/SharedServicesBundle/Resources/config/services.yml
@@ -8,6 +8,17 @@ services:
             $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
             $readinessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker'
 
+    mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker:
+        arguments:
+            $services:
+                service1: 'http://localhost:8001/health/check'
+                service2: 'http://localhost:8002/health/check'
+
+    mtonzar\SharedServicesBundle\Provider\MultiServiceHealthCheckProvider:
+        arguments:
+            $multiChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker'
+    tags: ['api_platform.state_provider']
+
     mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker: ~
