--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,8 +7,17 @@ services:
             $apiDependencyChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker'
             $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
             $readinessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker'
-            
-        tags: ['api_platform.state_provider']
+
+    mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker:
+        arguments:
+            $services:
+                service1: 'http://localhost:8001/health/check'
+                service2: 'http://localhost:8002/health/check'
+
+    mtonzar\SharedServicesBundle\Provider\MultiServiceHealthCheckProvider:
+        arguments:
+            $multiChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker'
+    tags: ['api_platform.state_provider']
 
     mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker: ~
@@ -16,5 +25,3 @@ services:
     mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker: ~
-    mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker: ~
-    
