--- a/src/SharedServicesBundle/Resources/config/services.yml
+++ b/src/SharedServicesBundle/Resources/config/services.yml
@@ -8,11 +8,6 @@ services:
             $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
             $readinessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker'
 
-    mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker:
-        arguments:
-            $services:
-                service1: 'http://localhost:8001/health/check'
-                service2: 'http://localhost:8002/health/check'
 
     mtonzar\SharedServicesBundle\Provider\MultiServiceHealthCheckProvider:
         arguments:
@@ -25,3 +20,4 @@ services:
     mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker: ~
