--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,45 +1,23 @@
+# SharedServicesBundle/config/services.yaml
 services:
     _defaults:
         autowire: true
         autoconfigure: true
         public: true
 
-    # HealthCheck services
-    mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker:
-        arguments:
-            $connection: '@doctrine.dbal.default_connection'
-
-    mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker:
-        arguments:
-            $client: '@http_client'
-            $apiUrl: '%env(EXTERNAL_API_URL)%'
-
+    # HealthCheckers
+    mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\CacheHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\QueueHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker: ~
     mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker: ~
+    mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker: ~
 
-    mtonzar\SharedServicesBundle\Service\HealthChecker\ReadinessHealthChecker:
-        arguments:
-            $connection: '@doctrine.dbal.default_connection'
-            $cache: '@cache.app'
-            $httpClient: '@http_client'
-            $externalServiceUrl: '%env(EXTERNAL_SERVICE_URL)%'
-
+    # MultiServiceHealthChecker avec tableau vide, à remplir dans le microservice
     mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker:
-        autowire: true
-        autoconfigure: true
-        public: true
         arguments:
-            $services:
-                serviceA: 'http://service-a:8001/health/check'
-                serviceB: 'http://service-b:8002/health/check'
-    # Providers
-    mtonzar\SharedServicesBundle\Provider\HealthCheckProvider:
-        arguments:
-            $databaseChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\DatabaseHealthChecker'
-            $apiDependencyChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\ApiDependencyHealthChecker'
-            $livenessChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\LivenessHealthChecker'
-        tags: ['api_platform.state_provider']
+            $services: []
 
-    mtonzar\SharedServicesBundle\Provider\MultiServiceHealthCheckProvider:
-        arguments:
-            $multiChecker: '@mtonzar\SharedServicesBundle\Service\HealthChecker\MultiServiceHealthChecker'
-        tags: ['api_platform.state_provider']
+    # Providers
+    mtonzar\SharedServicesBundle\Provider\HealthCheckProvider: ~
+    mtonzar\SharedServicesBundle\Provider\MultiServiceHealthCheckProvider: ~
