--- a/composer.json
+++ b/composer.json
@@ -1,75 +1,41 @@
 {
   "name": "mtonzar/shared-services-bundle",
-  "description": "Bundle Symfony partagé avec services communs (health checks, etc.)",
+  "description": "Bundle Symfony partagé avec services communs (health checks, API Platform, etc.)",
   "type": "symfony-bundle",
   "license": "MIT",
+  "keywords": ["symfony", "bundle", "api-platform", "shared-services", "health-check"],
+  "authors": [
+    {
+      "name": "mohamed tonzar",
+      "email": "mtonzar@saphir-innovation.com"
+    }
+  ],
   "autoload": {
     "psr-4": {
-      "mtonzar\\SharedServicesBundle\\": "src/SharedServicesBundle/"
+      "Mtonzar\\SharedServicesBundle\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Mtonzar\\SharedServicesBundle\\Tests\\": "tests/"
     }
   },
   "require": {
     "php": ">=8.1",
-    "ext-ctype": "*",
-    "ext-iconv": "*",
-    "api-platform/doctrine-orm": "^3.4",
-    "api-platform/symfony": "^3.4",
-    "doctrine/dbal": "^3 || ^4.2",
-    "doctrine/doctrine-bundle": "^2.15",
-    "doctrine/doctrine-migrations-bundle": "^3.4",
+    "api-platform/core": "^3.4",
+    "doctrine/doctrine-bundle": "^2.16",
     "doctrine/orm": "^3.5",
-    "nelmio/cors-bundle": "^2.5",
-    "phpdocumentor/reflection-docblock": "^5.6",
-    "phpstan/phpdoc-parser": "^2.2",
-    "symfony/asset": "6.4.*",
-    "symfony/console": "6.4.*",
-    "symfony/dotenv": "6.4.*",
-    "symfony/expression-language": "6.4.*",
-    "symfony/flex": "^2",
-    "symfony/framework-bundle": "^5.4 || ^6.0",
-    "symfony/http-client": "6.4.*",
-    "symfony/messenger": "6.4.*",
-    "symfony/property-access": "6.4.*",
-    "symfony/property-info": "6.4.*",
-    "symfony/runtime": "6.4.*",
-    "symfony/security-bundle": "6.4.*",
-    "symfony/serializer": "6.4.*",
-    "symfony/twig-bundle": "6.4.*",
-    "symfony/validator": "6.4.*",
-    "symfony/yaml": "6.4.*"
+    "symfony/config": "^6.4",
+    "symfony/dependency-injection": "^6.4",
+    "symfony/framework-bundle": "^6.4"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5|^10.0",
+    "symfony/phpunit-bridge": "^6.4"
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true,
   "config": {
-    "allow-plugins": {
-      "php-http/discovery": true,
-      "symfony/flex": true,
-      "symfony/runtime": true
-    },
     "sort-packages": true
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\Tests\\": "tests/"
-    }
-  },
-  "scripts": {
-    "auto-scripts": {
-      "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
-    },
-    "post-install-cmd": [
-      "@auto-scripts"
-    ],
-    "post-update-cmd": [
-      "@auto-scripts"
-    ]
-  },
-  "conflict": {
-    "symfony/symfony": "*"
-  },
-  "extra": {
-    "symfony": {
-      "allow-contrib": false,
-      "require": "6.4.*"
-    }
   }
 }
