--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
   ],
   "autoload": {
     "psr-4": {
-      "Mtonzar\\SharedServicesBundle\\": "src/"
+      "mtonzar\\SharedServicesBundle\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Mtonzar\\SharedServicesBundle\\Tests\\": "tests/"
+      "mtonzar\\SharedServicesBundle\\Tests\\": "tests/"
     }
   },
   "require": {
@@ -27,7 +27,8 @@
     "doctrine/orm": "^3.5",
     "symfony/config": "^6.4",
     "symfony/dependency-injection": "^6.4",
-    "symfony/framework-bundle": "^6.4"
+    "symfony/framework-bundle": "^6.4",
+    "symfony/runtime": "^6.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5|^10.0",
@@ -36,6 +37,9 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "symfony/runtime": true
+    }
   }
 }
