--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "mtonzar\\SharedServicesBundle\\": "src/SharedServicesBundle/"
+      "mtonzar\\SharedServicesBundle\\": "src/"
     }
   },
   "autoload-dev": {
@@ -23,12 +23,17 @@
   "require": {
     "php": ">=8.1",
     "api-platform/core": "^3.4",
+    "doctrine/dbal": "^3.0|^4.0",
     "doctrine/doctrine-bundle": "^2.16",
     "doctrine/orm": "^3.5",
-    "symfony/config": "^6.4",
-    "symfony/dependency-injection": "^6.4",
-    "symfony/framework-bundle": "^6.4",
-    "symfony/runtime": "^6.4"
+    "symfony/cache": "^6.4|^7.0",
+    "symfony/config": "^6.4|^7.0",
+    "symfony/dependency-injection": "^6.4|^7.0",
+    "symfony/framework-bundle": "^6.4|^7.0",
+    "symfony/http-client": "^6.4|^7.0",
+    "symfony/messenger": "^6.4|^7.0",
+    "symfony/runtime": "^6.4|^7.0",
+    "symfony/serializer": "^6.4|^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5|^10.0",
